<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_primeiro"
        android:id="@+id/button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_segundo"
        android:id="@+id/button2" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_terceiro"
        android:id="@+id/button3"
        android:layout_gravity="right" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:text="@string/lbl_quarto"
        android:id="@+id/button4" />
</LinearLayout>